# picktoss-import-member-worker

./: Dockerfile  pyproject.toml
.github/workflows/: aws.yml
core/sqs/: sqs_client.py
virtual_member_data/: virtual_member_data.json
worker/: worker.py
