[tool.poetry]
name = "import-member-worker"
version = "0.1.0"
description = ""
authors = ["Earthquakoo <cream5343@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymysql = "^1.1.1"
boto3 = "^1.34.144"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
